Realize the layouts of activity_app_main.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PictureToAsciiConverter</string>
+    
+    <string name="pictureToConvert">要转换的图片</string>
+    <string name="pictureToSave">要保存的图片</string>
+    <string name="savingPath">要保存的路径</string>
+    <string name="convert">转换</string>
 </resources>
